@@ -1,5 +1,6 @@
 2010-03-29  Aurelien Degremont  <aurelien.degremont@cea.fr>
     * Component code improvement fixes ticket #52.
+    * Fix timeout issues when installing (ticket #47).
 
 2010-03-02  Aurelien Degremont  <aurelien.degremont@cea.fr>
     * 'shine remove' now clean configuration on client nodes also (ticket #51).
